WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63393
Crash in frameless document with media element.
https://bugs.webkit.org/show_bug.cgi?id=63393
Summary
Crash in frameless document with media element.
Dimitri Glazkov (Google)
Reported
2011-06-25 19:52:15 PDT
Crash in frameless document with media element.
Attachments
Patch
(5.32 KB, patch)
2011-06-25 20:17 PDT
,
Dimitri Glazkov (Google)
no flags
Details
Formatted Diff
Diff
Patch
(5.35 KB, patch)
2011-06-25 20:18 PDT
,
Dimitri Glazkov (Google)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dimitri Glazkov (Google)
Comment 1
2011-06-25 20:17:15 PDT
Created
attachment 98616
[details]
Patch
Dimitri Glazkov (Google)
Comment 2
2011-06-25 20:18:40 PDT
Created
attachment 98617
[details]
Patch
WebKit Review Bot
Comment 3
2011-06-25 21:33:50 PDT
Comment on
attachment 98617
[details]
Patch Clearing flags on attachment: 98617 Committed
r89762
: <
http://trac.webkit.org/changeset/89762
>
WebKit Review Bot
Comment 4
2011-06-25 21:33:54 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug