2011-06-25  Dimitri Glazkov  <dglazkov@chromium.org>

Reviewed by Adam Barth.

        Crash in frameless document with media element.
        https://bugs.webkit.org/show_bug.cgi?id=63393

        * fast/dom/shadow/frameless-media-element-crash.html: Added.
        * fast/dom/shadow/frameless-media-element-crash-expected.txt: Added.
2011-06-25  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Adam Barth.

        Crash in frameless document with media element.
        https://bugs.webkit.org/show_bug.cgi?id=63393

        Since MediaControls::create can return 0 (and does for frameless documents), we must anticipate it
        in the calling code.

        Test: fast/dom/shadow/frameless-media-element-crash.html

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::attributeChanged): Changed to bail out if controls weren't successfully created.
        (WebCore::HTMLMediaElement::createMediaControls): Renamed to better reflect the purpose, changed to handle failure of creation.
        (WebCore::HTMLMediaElement::preDispatchEventHandler): Changed to bail out if controls weren't successfully created.
        * html/HTMLMediaElement.h: Adjusted def.

Canonical link: https://commits.webkit.org/79058@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89762 268f45cc-cd09-0410-ab3c-d52691b4dbfc